# resynth

./: Cargo.toml  LICENSE.txt  README.md  pre-commit.sh
.github/workflows/: rust.yml
doc/: grammar.bnf  opcodes.txt  parser.dot
examples/: arg-error.rsyn  assignments.rsyn  calls.rsy  dhcp.rsyn  dns.rsy  dns.rsyn  error-multiple-assign.rsy  gen.rsy  gen.rsyn  icmp-ping.rsy  import-error.rsyn  malleable-amazon.rsy  malleable-amazon.rsyn  missing-start.rsyn  refs.rsyn  rsa4096.x509.cert.der  smb2.rsyn  tls.rsyn  tlsfrag.rsyn  udp-syslog.rsy  udp-syslog.rsyn  vxlan.rsyn  warning.rsyn
ezpkt/: Cargo.toml  README.md
ezpkt/src/: dhcp.rs  icmp4.rs  lib.rs  tcp4.rs  udp4.rs  vxlan.rs
pkt/: Cargo.toml  README.md
pkt/src/: arp.rs  dhcp.rs  dns.rs  eth.rs  ipv4.rs  lib.rs  pcap.rs  tls.rs  vxlan.rs
scripts/tls/: gencode.py  tls-extensiontype-values-1.csv  tls-parameters-4.csv  tls-parameters-7.csv
src/: args.rs  cli.rs  err.rs  globals.rs  lex.rs  lib.rs  libapi.rs  loc.rs  macros.rs  main.rs  object.rs  parse.rs  pcap.rs  program.rs  stdlib.rs  str.rs  sym.rs  tcp4.rs  traits.rs  udp4.rs  val.rs
src/ezpkt/: icmp4.rs  mod.rs  tcp4.rs  udp4.rs
src/net/: ipv4.rs  mod.rs
src/pkt/: dns.rs  eth.rs  ipv4.rs  mod.rs  pcap.rs  util.rs
src/stdlib/: arp.rs  dhcp.rs  dns.rs  io.rs  mod.rs  text.rs  tls.rs  vxlan.rs
src/stdlib/ipv4/: icmp.rs  mod.rs  tcp.rs  udp.rs
src/test/: args.rs  mod.rs  object.rs
