[package]
edition = "2018"
name = "resynth"
version = "0.1.0"
description = "A packet synthesis language"
authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
license = "GPLv3"
homepage = "https://github.com/giannitedesco/resynth"
repository = "https://github.com/giannitedesco/resynth"
readme = "README.md"
keywords = [
 "packets",
 "packet-synthesis",
 "traffic-generation",
 "networking",
 "pcap",
]
categories = [
 "command-line-utilities",
 "compilers",
 "network programming",
]

[profile.release]
lto = true
panic = "abort"
incremental = true
codegen-units = 8

[profile.bench]
lto = true

[dependencies]
lazy-regex = "2.2.2"
regex = "1.5.4"
phf = { version = "0.10.1", features = ["macros"] }
clap = "3.0.0"
atty = "0.2.14"
termcolor = "1.1.2"
