[package]
edition = "2018"
name = "resynth"
version = "0.1.4"
description = "A packet synthesis language"
authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
license = "GPL-3.0-only"
homepage = "https://github.com/giannitedesco/resynth"
repository = "https://github.com/giannitedesco/resynth"
readme = "README.md"
keywords = [
 "packets",
 "packet-synthesis",
 "traffic-generation",
 "networking",
 "pcap",
]
categories = [
 "command-line-utilities",
 "compilers",
 "network-programming",
]
include = [
 "src/**/*.rs",
 "Cargo.toml",
 "README.md",
 "LICENSE.txt",
 "examples/*.rsyn",
 "doc/grammar.bnf",
 "doc/parser.dot",
]

[profile.release]
lto = true
panic = "abort"
incremental = true
codegen-units = 8

[profile.bench]
lto = true

[workspace]

[dependencies]
pkt = { path = "pkt", version = "0.1.4" }
ezpkt = { path = "ezpkt", version = "0.1.4" }

lazy-regex = "2.2.2"
regex = "1.5.4"
phf = { version = "0.10.1", features = ["macros"] }

clap = {version = "3.0.0", optional = true}
atty = {version = "0.2.14", optional = true}
termcolor = {version = "1.1.2", optional = true}

[[bin]]
name = "resynth"
path = "src/cli.rs"
required-features = ["cli"]

[features]
default = [
  "cli",
]
cli = ["clap", "atty", "termcolor"]
