[package]
edition = "2018"
name = "pkt"
version = "0.1.11"
description = "A packet construction library"
authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
license = "MIT"
homepage = "https://github.com/giannitedesco/resynth"
repository = "https://github.com/giannitedesco/resynth"
readme = "README.md"
keywords = [
 "packets",
 "traffic-generation",
 "networking",
 "pcap",
]
categories = [
 "network-programming",
]
include = [
 "src/**/*.rs",
 "Cargo.toml",
 "README.md",
 "LICENSE.txt",
]
